feat(api): add /api/healthz mirror; ci: auto PR supports feat/* and fix/*; misc .gitignore

--- a/.github/workflows/auto-pr.yml
+++ b/.github/workflows/auto-pr.yml
@@ -1,7 +1,7 @@
 name: Auto PR (work-phase2 -> main)
 on:
   push:
-    branches: [ work-phase2 ]
+    branches: [ work-phase2, feat/*, fix/* ]
   workflow_dispatch:
 permissions:
   contents: read
