chore: import reboot v0.1.0 into main lineage

--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -1,8 +1,15 @@
 name: backend-ci
-on: [push, pull_request]
+on:
+  push:
+  pull_request:
+  workflow_dispatch:
+
 jobs:
   lint-test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - run: echo "TODO: ruff/black/mypy/pytest" && echo "backend ok"
+      - name: Backend smoke
+        run: |
+          echo "TODO: add ruff/black/mypy/pytest"
+          echo "backend ok"
