Reboot v0.1.0 (compat): replace repo content with clean baseline (#8)
* chore: wipe tree to prepare compat reboot

* chore: import reboot v0.1.0 into origin/main lineage

---------

Co-authored-by: Amn1982 <َAminmaleknejad1@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,9 @@
-__pycache__/
-*.py[cod]
-*.sqlite3
-*.log
-.env
-.env.*
-.venv/
-venv/
+# Node / Vite
 node_modules/
 dist/
-build/
+# Python / Django
+__pycache__/
+*.pyc
+.env
+# OS
 .DS_Store
-coverage/
-staticfiles/
-backend/db.sqlite3
-nul
-agents-mode.patch
-patches/
-frontend/test-smoke.js
-frontend/src/components/tests/
-frontend/src/context/tests/
