--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -1,41 +1,27 @@
-name: Backend CI
+name: backend-ci
 on:
-  pull_request:
-    branches: [ main, feat/*, fix/*, work-phase2 ]
   push:
-    branches: [ main ]
-
+  pull_request:
+  workflow_dispatch:
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: backend
-    env:
-      DJANGO_SECRET_KEY: ci_secret
-      DJANGO_SETTINGS_MODULE: config.settings   # اگر نام تنظیمات فرق دارد، همین‌جا عوض کن
-      ALLOWED_HOSTS: "*"
-      DEBUG: "1"
-      # اگر پروژه از django-environ استفاده می‌کند:
-      DATABASE_URL: "sqlite:///db.sqlite3"
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
-        with: { python-version: "3.11" }
-
-      - name: Install deps
+        with: { python-version: '3.12' }
+      - name: Install
         run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt || true
-
-      - name: Migrate (sqlite)
+          python -m venv v
+          . v/bin/activate
+          pip install -r backend/requirements.txt
+      - name: Django checks
         run: |
-          python manage.py migrate --noinput || true
-
-      - name: Django check
+          . v/bin/activate
+          python backend/manage.py check
+      - name: Placeholder tests (Codex will replace)
         run: |
+          . v/bin/activate
           python - <<'PY'
-import django, os
-print("Django", django.get_version(), "DJANGO_SETTINGS_MODULE=", os.getenv("DJANGO_SETTINGS_MODULE"))
+print("No tests yet; Codex will add smoke tests in P1.")
 PY
-          python manage.py check
